--- a/Pegasus/build.gradle
+++ b/Pegasus/build.gradle
@@ -1,6 +1,8 @@
 plugins {
     id 'com.android.library'
     id 'org.jetbrains.kotlin.android'
+    id 'org.jetbrains.kotlin.kapt'
+
 }
 
 android {
@@ -21,11 +23,11 @@ android {
         }
     }
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility JavaVersion.VERSION_17
+        targetCompatibility JavaVersion.VERSION_17
     }
     kotlinOptions {
-        jvmTarget = '1.8'
+        jvmTarget = JavaVersion.VERSION_17.toString()
     }
 
     buildFeatures {
@@ -56,4 +58,7 @@ dependencies {
     implementation(Compose.activity)
     implementation(Compose.navigation)
     implementation(ImageLibraries.coil)
+
+    implementation "com.airbnb.android:showkase:1.0.0-beta18"
+    kapt "com.airbnb.android:showkase-processor:1.0.0-beta18"
 }
